--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ authors = ["Sergey Kacheev <uo0@ya.ru>"]
 [dependencies]
 clap = "~2.29.0"
 itertools = "0.7.7"
+serde = "1.0"
+serde_derive = "1.0"
+serde_yaml = "0.7"
