--- a/sample/pda-config.yaml
+++ b/sample/pda-config.yaml
@@ -3,23 +3,23 @@ bottom_character: $
 accept_states: [1]
 rulebook:
   rules:
-    - state: 1
+    - state: {State:1}
       character: '('
-      next_state: 2
+      next_state: {State:2}
       pop_character: $
       push_characters: [b, $]
-    - state: 2
+    - state: {State:2}
       character: '('
-      next_state: 2
+      next_state: {State:2}
       pop_character: b
       push_characters: [b, b]
-    - state: 2
+    - state: {State:2}
       character: ')'
-      next_state: 2
+      next_state: {State:2}
       pop_character: b
       push_characters: []
-    - state: 2
+    - state: {State:2}
       character: ~
-      next_state: 1
+      next_state: {State:1}
       pop_character: $
       push_characters: [$]
